--- a/views/layout-main.hbs
+++ b/views/layout-main.hbs
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>WDI Contacts</title>
+    <link rel="stylesheet" href="/assets/css/styles.css" />
   </head>
   <body>
     <h1><a href="/">WDI Contacts</a></h1>
