--- a/views/layout-main.hbs
+++ b/views/layout-main.hbs
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>WDI Contacts</title>
     <link rel="stylesheet" href="/assets/css/styles.css" />
+    <script src="/assets/js/app.js"></script>
   </head>
   <body>
     <h1><a href="/">WDI Contacts</a></h1>
