added show route- trouble shoot params

--- a/views/students-show.hbs
+++ b/views/students-show.hbs
@@ -1,3 +1,5 @@
+
+
 <h2>Name: {{student.name}}</h2>
-<h2>Phone: {{student.phone_number}}</h2>
-<h2>Email: {{student.email_address}}</h2>
+<h2>Phone: {{student.phone}}</h2>
+<h2>Email: {{student.email}}</h2>
