--- a/views/students-index.hbs
+++ b/views/students-index.hbs
@@ -1,6 +1,6 @@
 <h2>{{students.length}} Students</h2>
 {{#each students as |student index|}}
 <h3>
-  <a href="/students/{{student.name}}">{{student.name}}, {{student.phone_number}}, {{student.email_address}}</a>
+  <a href="/students/{{student.name}}">{{student.name}}, {{student.phone}}, {{student.email}}</a>
 </h3>
 {{/each}}
