--- a/views/students-show.hbs
+++ b/views/students-show.hbs
@@ -1,8 +1,13 @@
-
-{{#if student}}
-<h2>Name: {{student.name}}</h2>
-<h2>Phone: {{student.phone}}</h2>
-<h2>Email: {{student.email}}</h2>
-{{else}}
+{{#unless student}}
 <h2>That student could not be found!</h2>
-{{/if}}
+{{else}}
+<h2>{{student.name}}</h2>
+<h2>{{student.phone}}</h2>
+<h2>{{student.email}}</h2>
+<form action="/students/{{student.name}}" method="post">
+  <input type="text" name="student[name]" placeholder="Name" value="{{student.name}}" />
+  <input type="text" name="student[phone]" placeholder="Phone" value="{{student.phone}}" />
+  <input type="text" name="student[email]" placeholder="Email" value="{{student.email}}" />
+<button type="sumbit">Edit Contact</button>
+</form>
+{{/unless}}
