--- a/views/students-show.hbs
+++ b/views/students-show.hbs
@@ -4,6 +4,10 @@
 <h2>{{student.name}}</h2>
 <h2>{{student.phone}}</h2>
 <h2>{{student.email}}</h2>
+<form method="post" action="/students/{{student.name}}/delete">
+  <button type="submit">Delete Contact</button>
+</form>
+
 <form action="/students/{{student.name}}" method="post">
   <input type="text" name="student[name]" placeholder="Name" value="{{student.name}}" />
   <input type="text" name="student[phone]" placeholder="Phone" value="{{student.phone}}" />
