--- a/views/layout-main.hbs
+++ b/views/layout-main.hbs
@@ -3,11 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>WDI Contacts</title>
+    <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/assets/css/styles.css" />
     <script src="/assets/js/app.js"></script>
   </head>
-  <body>
-    <h1><a href="/">WDI Contacts</a></h1>
+  <body id="main-body">
+    <div class="container">
+    <h1 class="title">WDI 8 Contact List</h1>
+    <button class="nav"><a href="/">home</a></button>
     {{{body}}}
+    <div>
   </body>
 </html>
